--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "googleapis": "^166.0.0",
     "lucide-react": "^0.344.0",
+    "mongoose": "^9.0.0",
     "nodemon": "^3.1.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
